[package]
name = "libpart"
version = "0.1.0"
authors = ["Stephan Henrichs <stiepen22@gmx.de>"]
description = "Library for manipulating partition tables"
license = "lgpl"
repository = "https://github.com/Kilobyte22/libpart"

[dependencies]
checksum = "0.2.1"
byteorder = "1.0.0"

[dependencies.uuid]
version = "0.5"
features = ["use_std"]
