[package]
name = "libpart"
version = "0.1.4"
authors = ["Stephan Henrichs <stiepen22@gmx.de>"]
description = "Library for manipulating partition tables"
license = "LGPL-3.0"
repository = "https://github.com/Kilobyte22/libpart"
documentation = "https://kilobyte22.de/doc/libpart"

[dependencies]
checksum = "0.2.1"
byteorder = "1.0.0"

[dependencies.uuid]
version = "0.5"
features = ["use_std", "v4"]
